# pyexec_compiler

./: Readme.md  benchmark.py  pyproject.toml
docs/: AOT_GUIDE.md  JIT_GUIDE.md  LIMITATIONS_AND_WORKAROUNDS.md  MEMORY_GUIDE.md  README.md  RUNTIME_GUIDE.md  TYPES_GUIDE.md  WASM_GUIDE.md
pyexec/: __init__.py  aot_backend.py  ast_to_ir.py  codegen_llvm.py  errors.py  ir.py  jit_backend.py  memory.py  runtime.py  types.py  wasm_backend.py  wasm_linker.py  wasm_memory.py
